# needy

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: needy.md  scopes.md
docs/concepts/: scopes.md
src/needy/: __init__.py  _version.py  scopes.py
tests/: test_scopes.py  test_version.py
